2008-12-01  Neil Roberts  <neil@linux.intel.com>

	Bug 1305 - NPOT textures unaligned to a pixel sometimes have
	border artifacts

	* clutter/cogl/gl/cogl-texture.c: Set the wrap mode of a texture
	on demand

	Instead of setting the wrap mode once per texture at creation, it
	is now changed whenever the texture is drawn. The previous value
	is cached so that it isn't changed if the value is the same.

	This is used in _cogl_texture_quad_hw to only enable GL_REPEAT
	mode when the coordinates are not in the range [0,1]. Otherwise it
	can pull in pixels from the other edge when the texture is
	rendered off-pixel.

2008-11-28  Neil Roberts  <neil@linux.intel.com>

	* tests/conform/test-backface-culling.c (TEXTURE_SIZE): Don't set
	to a funny size on GLES because it will break cogl_texture_polygon

2008-11-28  Neil Roberts  <neil@linux.intel.com>

	* tests/conform/test-backface-culling.c: New test for backface
	culling

	* tests/conform/test-conform-main.c (main): Add
	/texture/test_backface_culing

	* tests/conform/Makefile.am (test_conformance_SOURCES): Add
	test-backface-culling.c

2008-11-28  Neil Roberts  <neil@linux.intel.com>

	* tests/conform/test-mesh-mutability.c:
	* tests/conform/test-mesh-interleved.c:
	* tests/conform/test-mesh-contiguous.c: Remove the idle source
	after the test is complete so that it won't interfere with other
	tests.

2008-11-26  Emmanuele Bassi  <ebassi@linux.intel.com>

	* clutter/clutter-group.c:
	(clutter_group_real_raise), (clutter_group_real_lower): Repaint
	the Group on raise and lower.

2008-11-26  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gl/cogl-texture.c (cogl_texture_rectangle): Fixed
	the test for whether to use hardware tiling. Previously it assumed
	that texture coordinates are in increasing order but this is not
	the case since bug 1057 was fixed. The texture coordinates are now
	sorted later. It also allowed negative coordinates which doesn't
	make sense if the texture has waste.
